fluxgui (1.1.9) wily; urgency=low

  * remove pid file / lock file. We have several bug reports about fluxgui
    failing to start due to stale pid files, but I doubt anyone has the problem
    of accidentally starting multiple copies of fluxgui. We can revisit this
    if it turns out not having the pid file causes problems.

fluxgui (1.1.8) lucid; urgency=low

  * add in python-pexpect as a dependency 

 -- Kilian Valkhof <kilian@kilianvalkhof.com>  Wed, 08 Sep 2010 12:12:16 +0200

fluxgui (1.1.7-0ubuntu1) lucid; urgency=low

  * handle xflux closing more gracefully (thanks to axonxorz) 

 -- Kilian Valkhof <kilian@kilianvalkhof.com>  Sat, 31 Jul 2010 15:29:01 +0200

fluxgui (1.1.6-0ubuntu1) lucid; urgency=low

  * make the preview button preview the selected value instead of current
  * update xflux
  * improved KDE support (needs testing)

 -- Kilian Valkhof <kilian@ktop3>  Thu, 29 Jul 2010 14:32:55 +0200

fluxgui (1.1.5-0ubuntu1) lucid; urgency=low

  * remove any stray lock files if xflux can't be started (by seancron) 

 -- Kilian Valkhof <kilian@kilianvalkhof.com>  Mon, 26 Jul 2010 23:15:51 +0200

fluxgui (1.1.4-0ubuntu1) lucid; urgency=low

  * fix problems with the first start of the application when there are no settings yet 

 -- Kilian Valkhof <kilian@kilianvalkhof.com>  Mon, 26 Jul 2010 17:46:41 +0200

fluxgui (1.1.3-0ubuntu1) lucid; urgency=low

  * clean up properly after a keyboardinterrupt 

 -- Kilian Valkhof <kilian@kilianvalkhof.com>  Mon, 26 Jul 2010 14:05:51 +0200

fluxgui (1.1.2-0ubuntu1) lucid; urgency=low

  * add a close button to the preferences pane 

 -- Kilian Valkhof <kilian@kilianvalkhof.com>  Mon, 26 Jul 2010 12:08:10 +0200

fluxgui (1.1.1-0ubuntu1) lucid; urgency=low

  * update some debian settings

 -- Kilian Valkhof <kilian@kilianvalkhof.com>  Sun, 25 Jul 2010 14:18:19 +0200

fluxgui (1.1.0-0ubuntu1) lucid; urgency=low

  * prevent fluxgui from starting more than once
  * implement a preview button